--- a/basic-login/index.html
+++ b/basic-login/index.html
@@ -18,17 +18,19 @@
         <div
             class="flex flex-col gap-6 rounded border border-solid border-gray-600/90 bg-slate-900/75 p-8 m-2 shadow-md sm:w-[400px]">
             <div class="flex flex-col">
-                <p class="text-2xl font-semibold tracking-widest">Welcome back!</p>
-                <span class="text-sm text-gray-300">Login into your account.</span>
+                <p class="text-base font-semibold tracking-widest sm:text-2xl">Welcome back!</p>
+                <small class="text-xs text-gray-300">Login into your account.</small>
             </div>
             <div>
-                <form action="#">
+                <form action="#" autocomplete="off">
                     <label class="block">
                         <span class="block text-sm font-medium after:ml-0.5 after:text-red-500 after:content-['*']">
                             Email Address</span>
                         <input type="email" name="email"
                             class="mt-1 block w-full rounded-md border border-gray-400 bg-transparent px-3 py-2 placeholder-gray-400 shadow-sm focus:border-blue-500 focus:outline-none focus:ring-0 focus:ring-blue-500 sm:text-sm"
-                            placeholder="user@example.com" required />
+                            placeholder="user@example.com"
+                            pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}"
+                            required />
                     </label>
 
                     <label class="mt-3 block">
