--- a/dark-login/index.html
+++ b/dark-login/index.html
@@ -53,7 +53,9 @@
                             <span class="block text-sm font-medium"> Email Address</span>
                             <input type="email" name="email"
                                 class="mt-1 block w-full rounded-md border border-gray-500 bg-transparent px-3 py-2 placeholder-gray-400 shadow-sm focus:border-blue-300 focus:outline-none focus:ring-0 sm:text-sm"
-                                placeholder="user@example.com" required />
+                                placeholder="user@example.com"
+                                pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}"
+                                required />
                         </label>
 
                         <label class="mt-3 block">
